Market.Sales/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-service
  template:
    metadata:
      labels:
        app: sales-service
    spec:
      containers:
      - name: sales-service
        image: felipehimself/market-sales
